# portmidi

./: CMakeLists.txt  README.md  lib_needed.cmake
include/: portmidi.h
